# restaurante-api

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  clean_project.py  prompt.md  pyproject.toml
.engram/mem_saves/: implemented_async_in_memory_repository.json  sdd_task1_pydantic_conventions.json
.github/workflows/: ci.yml  pre-commit.yml  pytest.yml  ruff.yml  ty.yml  uv.yml
evidencias/: prompts.md
openspec/: config.yaml
src/: config.py  database.py  main.py
src/api/: __init__.py  config.py  dependencies.py  deps.py  error_handlers.py  errors.py  http_errors.py  menu.py  menu_router.py  orden_router.py  ordenes.py
src/core/: __init__.py  cantidad.py  config.py  database.py  dominio_error.py  estado_orden.py  exceptions.py  item_orden.py  models.py  orden.py  plato.py  precio.py  recurso_no_encontrado_error.py  registro.py  schemas.py
src/db/: session.py
src/repositories/: abstract_repository.py  base_repository.py  database.py  database_settings.py  in_memory_menu_repository.py  in_memory_orden_repository.py  in_memory_record.py  in_memory_repository.py  menu.py  menu_repository.py  orden.py  orden_repository.py  ordenes.py  sqlmodel_menu_repository.py  sqlmodel_orden_repository.py
src/restaurante_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: aplicacion_error.py  caso_de_uso.py  container.py  menu.py  menu_service.py  orden.py  orden_service.py  ordenes.py  recurso_aplicacion_no_encontrado_error.py  regla_aplicacion_error.py
test/: conftest.py  test_errors.py  test_main.py
(+131 files in other folders)
