[project]
name = "restaurante-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Rowell Urbaez Reyes", email = "urbaez.r.22@gmail.com" }]
maintainers = [
    { name = "Rowell Urbaez Reyes", email = "urbaez.r.22@gmail.com" },
]

dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.38",
]
[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0", "ruff>=0.15.12", "ty>=0.0.34"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
target-version = "py314"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["B", "D", "I", "N", "Q", "UP"]

ignore = ["D203", "D213", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.ty.src]
include = ["src", "test"]

[tool.ty.terminal]
output-format = "concise"

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["test"]
